EXTRA_DIST= ChangeLog    		\
	    lib-prefix.m4		\
	    ltversion.m4		\
	    rb_boost_serialization.m4	\
	    rb_freetype.m4 		\
	    gettext.m4   		\
	    libtool.m4      		\
	    nls.m4            		\
	    rb_boost_test.m4            \
	    rb_m4.m4 			\
	    iconv.m4     		\
	    lt~obsolete.m4  		\
	    po.m4             		\
	    rb_bz2.m4                   \
	    rb_summary.m4 		\
	    lib-ld.m4    		\
	    ltoptions.m4    		\
	    progtest.m4       		\
	    rb_dirtyflag.m4             \
	    rb_uml.m4 			\
	    lib-link.m4  		\
	    ltsugar.m4      		\
	    rb_alloptions.m4  		\
	    rb_dot.m4
